--- a/wajibisha/templates/blocks/filter_promises.html
+++ b/wajibisha/templates/blocks/filter_promises.html
@@ -1,15 +1,8 @@
 {% load sass_tags staticfiles %}
-<div class="mt-200">
+<div class="">
   <div class="showcase how-it-works text-center">
-    <div class="wrapper clearfix">
-      <h2>Promises</h2>
-      <br/>
-    </div>
 
     <div class="row">
-      <div class="column-half text-left">
-        <p class="text-blue"><span>&lt; </span> GO BACK</p>
-      </div>
       <div class="column-half text-right display-inline">
         <p class="float-left filter-text">Filter By: </p>
         <div class="display-inline">
