fixed static files path

--- a/wajibisha/templates/blocks/filter_promises.html
+++ b/wajibisha/templates/blocks/filter_promises.html
@@ -85,7 +85,7 @@
           var card_img = "";
           switch (promise.status) {
               case 'In Progress':
-                  card_img = "in-Progress-portrait.svg\" ";
+                  card_img = "in-progress-portrait.svg\" ";
                   break;
               case 'Done':
                   card_img = "fulfilled-portrait.svg\" ";
@@ -128,13 +128,13 @@
               "                <td colspan=\"3\">\n" +
               "                  <div class=\"d-flex flex-row\">\n" +
               "                    <p class=\"offset-1\"><img\n" +
-              "                        src=\"{% static 'img/tracker/Share.svg' %}\" height=\"15px\"\n" +
+              "                        src=\"{% static 'img/tracker/share.svg' %}\" height=\"15px\"\n" +
               "                        width=\"15px\"> Share</p>\n" +
               "                    <p class=\"offset-1\"><img\n" +
-              "                        src=\"{% static 'img/tracker/Watch.svg' %}\" height=\"15px\"\n" +
+              "                        src=\"{% static 'img/tracker/watch.svg' %}\" height=\"15px\"\n" +
               "                        width=\"15px\"> Watch</p>\n" +
               "                    <p class=\"offset-1\"><img\n" +
-              "                        src=\"{% static 'img/tracker/Clap.svg' %}\" height=\"15px\"\n" +
+              "                        src=\"{% static 'img/tracker/clap.svg' %}\" height=\"15px\"\n" +
               "                        width=\"15px\"> Congratulate</p>\n" +
               "                  </div>\n" +
               "                </td>\n" +
