--- a/elimu_yangu/leaguetable/templates/leaguetable/specific_school.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/specific_school.html
@@ -1,12 +1,6 @@
-{% extends '_base.html' %}
+{% extends 'leaguetable/profile/profile_detail.html' %}
 {% load i18n %}
 {% load staticfiles %}
-{% block head_css_extra %}
-<link rel="stylesheet" href="{% static 'lib/bootstrap/dist/css/bootstrap.css' %}" />
-<link rel="stylesheet" href="{% static 'css/vendor/leaflet-0.6.4.css' %}" />
-<link href="{% static 'css/vendor/leaflet.label.css' %}" rel="stylesheet" />
-<link rel="stylesheet" href="{% static 'css/site.css' %}" />
-{% endblock %}
 {% block header %}
 <style>
     #page-footer {
@@ -154,181 +148,7 @@
 {% block profile_detail %}
 {% endblock %}
 
-{% block body_javascript_extra %}
-{{ block.super }}
 
-{% block profile_javascript_libs %}
-<script src="{% static 'js/vendor/leaflet-0.6.4.js' %}"></script>
-<script src="{% static 'js/vendor/topojson.v1.min.js' %}"></script>
-<script src="{% static 'js/vendor/leaflet.label.js' %}"></script>
-<script src="{% static 'js/charts.js' %}"></script>
-<script src="{% static 'js/head2head.js' %}"></script>
-<script src="{% static 'js/maps_static.js' %}"></script>
-<script src="{% static 'js/profile_map.js' %}"></script>
-{% endblock %}
-
-<script type="text/javascript">
-
-// Create all the charts
-var Charts = {},
-    chartContainers = $('[id^=chart-]'),
-    defaultDataRelease = '{{ geography.census_release }}',
-    profileData = {{ profile_data_json }};
-
-var gracefulType = function(chartType) {
-    // convert certain chart types to more readable versions at narrow widths
-    if (browserWidth <= 640) {
-        if (chartType == 'column' || chartType == 'histogram') {
-            return 'bar'
-        } else if (chartType == 'grouped_column') {
-            return 'grouped_bar'
-        }
-    }
-    return chartType
-}
-
-var makeCharts = function() {
-    $.each(chartContainers, function(i, obj) {
-        $(obj).empty();
-        var chartID = $(this).prop('id'),
-            chartDataKey = chartID.replace('chart-','').replace('alt-',''),
-            chartDataID = chartDataKey.split('-'),
-            chartType = gracefulType(chartDataID[0]),
-            chartData = profileData[chartDataID[1]],
-            chartChartTitle = $(this).data('chart-title'),
-            chartChartShowYAxis = $(this).data('chart-show-y-axis'),
-            chartInitialSort = $(this).data('initial-sort'),
-            chartStatType = $(this).data('stat-type'),
-            chartDecimalPlaces = $(this).data('decimal-places'),
-            chartQualifier = $(this).data('qualifier') || null,
-            geographyData = profileData['geography'],
-            comparisonLevels = {{ WAZIMAP.comparative_levels|safe }};
-
-        // allow arbitrary nesting in API data structure
-        var drilldown = chartDataID.length - 1;
-        if (drilldown >= 2) {
-            for (var n = 2; n <= drilldown; n++) {
-                chartData = chartData[chartDataID[n]]
-            }
-        }
-
-        // determine whether data point is from anything other
-        // than the primary ACS release for this page
-        for (var key in chartData) if (chartData.hasOwnProperty(key)) break;
-        var thisRelease = chartData[key]['acs_release'],
-            noteRelease = (thisRelease != defaultDataRelease) ? thisRelease + ' data' : null;
-
-        /*chartQualifier = (chartQualifier && noteRelease) ? Array(chartQualifier, noteRelease)
-            .filter(function(n) { return n }).join('; ') : null;*/
-
-        var chartstuff = {
-            chartContainer: chartID,
-            chartDataKey: chartDataKey,
-            chartType: chartType,
-            chartHeight: 160,
-            chartData: chartData,
-            chartQualifier: chartQualifier,
-            chartChartTitle: chartChartTitle,
-            chartInitialSort: chartInitialSort,
-            chartStatType: chartStatType,
-            chartDecimalPlaces: chartDecimalPlaces,
-            geographyData: geographyData,
-            comparisonLevels: comparisonLevels
-        }
-        try {
-            Charts[i] = Chart(chartstuff);
-        } catch(e) {
-            console.log("Error making chart " + chartID)
-            console.log(chartstuff);
-        }
-    });
-}
-
-var maps = new ProfileMaps();
-maps.drawMapsForProfile(profileData.geography);
-
-//Add school point location if latitude && longitude of school exists
-var latitude = {{ school.latitude | safe }}
-var longitude = {{ school.longitude | safe }}
-
-if (latitude && longitude) {
-  var geojsonFeature = {
-    "type": "Feature",
-    "properties": {
-        "name": "Coors Field",
-        "amenity": "Baseball Stadium",
-        "popupContent": "This is where the Rockies play!"
-    },
-    "geometry": {
-        "type": "Point",
-        "coordinates": [
-          longitude,
-          latitude,
-        ]
-    }
-  };
-  L.geoJson(geojsonFeature).addTo(maps.map)
-}
-
-makeCharts();
-
-// listen for resize, redraw charts to new dimensions
-var lazyRedrawCharts = _.debounce(function() {
-    window.browserWidth = document.documentElement.clientWidth;
-    window.browserHeight = document.documentElement.clientHeight;
-    makeCharts();
-}, 50);
-$(window).resize(lazyRedrawCharts);
-
-// for touch devices, still allow context toggle
-$('.stat-row').on('click', '.stat', function() {
-    $(this).find('.context').toggle();
-});
-
-var parentLinkContainer = null;
-if (!!parentLinkContainer) {
-    // set up the listener for trigger to reveal hidden groups
-    $('#header-box').on('click', '.link-reveal', function() {
-        $(this).hide().next('.hidden').show();
-        return false;
-    });
-
-    // hit the /parents API endpoint
-    $.getJSON(parentGeoAPI)
-        .done(function(results) {
-            // filter out 'this' from the parents
-            var parents = _.reject(results['parents'], function(p) {
-                return p.relation === 'this';
-            });
-            // list of unique parent sumlev types, maintaining order
-            var parentRelations = _.uniq(_.pluck(parents, 'sumlevel'));
-            // collect parents into individual sumlev groups
-            var parentGroups = _.groupBy(parents, function(d) {
-                return d.sumlevel;
-            });
-            // for each parent sumlev type ...
-            var parentLinkSets = _.map(parentRelations, function(r) {
-                // ... compile a set of links to individual profile pages
-                var parentLinkSet = _.map(parentGroups[r], function(v, k) {
-                    return '<a href="/profiles/' + v.geoid + '-' + slugify(v.display_name) + '/">' + v.display_name + '</a>';
-                });
-                var numParents = parentLinkSet.length;
-                // if more than one of a sumlev type, group behind reveal link
-                if (numParents > 1) {
-                    return '<a href="#" class="link-reveal">'+numParents+' '+ sumlevMap[r]['plural'] +'</a><span class="hidden">'+parentLinkSet.join(', ')+'</span>';
-                } else {
-                    // just one of this sumlev type, so add it to list
-                    return parentLinkSet;
-                }
-            })
-            // push the whole thing into the header box ... thingy
-            parentLinkContainer.html(parentLinksPrefix + parentLinkSets.join(', '));
-            $('body').trigger('glossaryUpdate', parentLinkContainer);
-        });
-}
-
-</script>
-{% endblock %}
 
 <!-- embed table script -->
 
