--- a/hurumap/templates/_base.html
+++ b/hurumap/templates/_base.html
@@ -126,4 +126,11 @@
             lastScrollTop = st;
         }
     </script>
+    <script>
+        {% for ga_tracking_id in HURUMAP.ga_tracking_ids %}
+            ga('create', '{{ ga_tracking_id }}', 'auto', {'name': 'ga_{{ forloop.counter }}' });
+            ga('ga_{{ forloop.counter }}.send', 'pageview');
+        {% endfor %}
+
+    </script>
 {%  endblock %}
