--- a/wajibisha/templates/homepage_country.html
+++ b/wajibisha/templates/homepage_country.html
@@ -43,8 +43,8 @@
       <h4>SOME OF THE PROMISES WE'RE TRACKING</h4>
       <br/>
       <!--Start of cards-->
-      <div class="card-group">
-        <div class="card p-0 m-3 body-text">
+      <div class="card-group" style="height:500px;">
+        <div class="card p-0 m-3 body-text" style="height:450px;">
           <div class="pt-4">
             <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/tracker/category/housing.svg' %}" alt="Card image cap"></div>
             <div class="card-block">
@@ -56,7 +56,7 @@
               <p class="pl-4" >Promises fulfilled: <b>{{ housing_fulfilled }}</b></p>
             </div>
           </div>
-          <div class="card p-0 m-3 body-text">
+          <div class="card p-0 m-3 body-text" style="height:450px;">
             <div class="pt-4">
               <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/tracker/category//health.svg' %}" alt="Card image cap"></div>
               <div class="card-block">
@@ -68,7 +68,7 @@
                 <p class="pl-4">Promises fulfilled:<b>{{ health_fulfilled }}</b></p>
               </div>
             </div>
-            <div class="card p-0 m-3 body-text">
+            <div class="card p-0 m-3 body-text" style="height:450px;">
               <div class="pt-4">
                 <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/tracker/category/jobs.svg' %}" alt="Card image cap"></div>
                 <div class="card-block">
