--- a/wajibisha/templates/profile/profile_detail.html
+++ b/wajibisha/templates/profile/profile_detail.html
@@ -15,7 +15,7 @@
 
     <div class="showcase how-it-works text-center">
       <div class="wrapper clearfix">
-        <h2>Promises</h2>
+        <h4>PROMISES</h4>
         <br/>
       </div>
       <div class="container">
