--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -93,6 +93,15 @@ body {
 
 }
 
+.column-third-promise{
+  width: 48%;
+}
+
+.column-third-profile.text-right {
+    margin-top: -100px;
+    width: 110%;
+}
+
 .promises-header {
   background-color: #0067a3;
   height: 300px;
