--- a/wajibisha/templates/blocks/promises-header.html
+++ b/wajibisha/templates/blocks/promises-header.html
@@ -1,7 +1,7 @@
 {% load sass_tags staticfiles wajibisha_tags %}
 <div class="promises-header clearfix">
 	<div class="wrapper content-container">
-		<div class="column-third text-left">
+		<div class="column-third-promise text-left">
 			<h2>{{ geography.this.short_name }}</h2>
 			<div class="blue-text">
 				<p class="m-0">Population: {{ demographics.total_population.values.this|floatformat:"0" }}</p>
@@ -9,7 +9,7 @@
 			</div>
 			<p class="blue-text">Censes data: 2009</p>
 		</div>
-		<div class="column-third">
+		<!--<div class="column-third-promise">
 			<div id="custom-search-input">
 				<div class="row">
 					<div class="col-md-12"> 
@@ -17,8 +17,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="column-third text-right">
+		</div>-->
+		<div class="column-third-profile text-right">
 			<img src="{% static 'img/profile/mike-sonko.jpg' %}" class="rounded-circle" height="150px;"> 
 			<div class="blue-text">
 				<p class="pb-0">
