Update label styling

--- a/wajibisha/templates/blocks/filter_promises.html
+++ b/wajibisha/templates/blocks/filter_promises.html
@@ -111,7 +111,7 @@
               "                <td colspan=\"3\">\n" +
               "                  <button class=\"btn btn-primary rounded-0 pull-right\"\n" +
               "                          type=\"button\"\n" +
-              "                          style=\"margin-top:-28px;background-color: #0067a3;padding-left: 2rem;padding-right: 2rem;\">"
+              "                          style=\"margin-top:-28px;background-color: #0067a3;padding-left: 2rem;padding-right: 2rem;text-transform: uppercase;\">"
 
           html += promise.sector + "</button>\n" +
               "                  <div class=\"pt-2\"><p\n" +
