--- a/wajibisha/templates/blocks/filter_promises.html
+++ b/wajibisha/templates/blocks/filter_promises.html
@@ -1,6 +1,6 @@
 {% load sass_tags staticfiles %}
 <div class="">
-  <div class="showcase how-it-works text-center">
+  <div class="showcase how-it-works text-center body-text">
     <div clas="col-6 text-left">
       <div class="d-flex flex-row justify-content-start">
         <div class="row d-flex flex-row justify-content-end pb-5 breadcrumb-color">
@@ -26,6 +26,7 @@
 
           </div>
         </div>
+      </div>
 
 
     <!--fulfilled card section-->
@@ -111,7 +112,7 @@
               "                <td colspan=\"3\">\n" +
               "                  <button class=\"btn btn-primary rounded-0 pull-right\"\n" +
               "                          type=\"button\"\n" +
-              "                          style=\"margin-top:-28px;background-color: #0067a3;padding-left: 2rem;padding-right: 2rem;text-transform: uppercase;\">"
+              "                          style=\"margin-top:-28px;background-color: #0067a3;padding-left: 2rem;padding-right: 2rem;text-transform: uppercase;color:#e6e6e6;letter-spacing:0.04rem;\">"
 
           html += promise.sector + "</button>\n" +
               "                  <div class=\"pt-2\"><p\n" +
