--- a/wajibisha/templates/profile/profile_detail.html
+++ b/wajibisha/templates/profile/profile_detail.html
@@ -22,7 +22,8 @@
         <div class="row d-flex flex-row justify-content-end pb-5"
              style="color:#006699;">
           <p class="small pt-3 pb-3">Group by:</p>
-          <div class="btn-group pl-4 pr-5 tab" role="group" aria-label="Group by">
+          <div class="btn-group pl-4 pr-5 tab" role="group"
+               aria-label="Group by">
             <button type="button" onclick="openTab(event, 'tab_all')"
                     class="btn btn-primary pl-4 pr-3 border-2 tablinks"
                     style="border-top-left-radius:50px;border-bottom-left-radius:50px;">
@@ -86,7 +87,20 @@
         {% include 'blocks/filter_promises.html' with promises_json=filtered_promises.promises sectors=filtered_promises.sectors statuses=filtered_promises.statuses %}
       </div>
 
-      <div class="tabcontent" id="tab_status"></div>
+      <div class="tabcontent" id="tab_status">
+        <div class="row">
+
+          {% include 'profile/_blocks/promises_by_status.html' with value=promise_by_status.done total=promise_by_status.total status='done' %}
+          {% include 'profile/_blocks/promises_by_status.html' with value=promise_by_status.not_done total=promise_by_status.total status='not done' %}
+
+
+        </div>
+        <div class="row" style="margin-top: 60px">
+          {% include 'profile/_blocks/promises_by_status.html' with value=promise_by_status.in_progress total=promise_by_status.total status='in progress' %}
+          {% include 'profile/_blocks/promises_by_status.html' with value=promise_by_status.five_years_plans total=promise_by_status.total status='stalled' %}
+
+        </div>
+      </div>
 
     </div>
 
@@ -95,6 +109,7 @@
   <script>
 
       document.getElementById("tab_sector").click();
+
       function openTab(evt, tabName) {
           // Declare all variables
           var i, tabcontent, tablinks;
