--- a/wajibisha/templates/homepage_country.html
+++ b/wajibisha/templates/homepage_country.html
@@ -40,7 +40,7 @@
   <div class="showcase how-it-works text-center">
     {% block how_it_works %}
     <div class="wrapper clearfix">
-      <h4>SOME OF THE PROMISES WE'RE TRACKING</h4>
+      <h4>SOME OF THE PROMISES WE ARE TRACKING</h4>
       <br/>
       <!--Start of cards-->
       <div class="card-group" style="height:500px;">
