--- a/wajibisha/templates/profile/profile_detail.html
+++ b/wajibisha/templates/profile/profile_detail.html
@@ -19,6 +19,8 @@
         <br/>
       </div>
       <div class="container">
+        <div class="row">
+        <div class="col-6 pull-right">
         <div class="row d-flex flex-row justify-content-end pb-5"
              style="color:#006699;">
           <p class="small pt-3 pb-3">Group by:</p>
@@ -40,6 +42,10 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="col-6 pull-left"></div>
+  </div>
+      
 
       <div class="tabcontent" id="tab_sector" style="display: block">
 
